ending text-align fix

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 .thanksdiv {
   display: none;
   position: absolute;
+  text-align: center;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
